Bumping Dependencies Fixing File Picker Showing ScrollBar

--- a/src/ui/customElement/filePicker/style.css
+++ b/src/ui/customElement/filePicker/style.css
@@ -28,6 +28,7 @@
     white-space: normal;
     overflow-x: hidden;
     padding-left: 9px;
+    white-space: nowrap;
 }
 
 .element:hover .edit-icon {
